--- a/client-integration1C/src/main/resources/application.properties
+++ b/client-integration1C/src/main/resources/application.properties
@@ -1,19 +1,20 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.show_sql=true
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.show_sql=true
 
-shareit-server.url=http://localhost:9090
-server.error.include-message=always
-spring.sql.init.mode=always
-explore-server.url=http://localhost:9090
+#server-integration.url=http://localhost
+#server.error.include-message=always
+#spring.sql.init.mode=always
 server.port=8080
 spring.datasource.url=jdbc:postgresql://localhost:5432/${db.name}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=1
 db.name=integration-1c-client-base
-logging.level.org.springframework.orm.jpa=INFO
-logging.level.org.springframework.transaction=INFO
-logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+#logging.level.org.springframework.orm.jpa=INFO
+#logging.level.org.springframework.transaction=INFO
+#logging.level.org.springframework.transaction.interceptor=TRACE
+#logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+server.error.include-message=always
+spring.sql.init.mode=always
 #---
