--- a/server-integration1C/src/main/resources/application.properties
+++ b/server-integration1C/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show_sql=true
 
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/${db.name}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=1
-db.name=integration-1c-server-base
+db.name=integration-1c-client-base
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
