--- a/server-integration1C/pom.xml
+++ b/server-integration1C/pom.xml
@@ -16,10 +16,20 @@
     <properties>
         <java.version>11</java.version>
     </properties>
-    <!--<dependencies>
+    <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.3.0</version>
         </dependency>
 
         <dependency>
@@ -27,7 +37,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-    </dependencies>-->
+    </dependencies>
 
     <build>
         <plugins>
